--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "typecheck": "tsc -b",
     "lint": "node scripts/lint.js",
     "test": "tsc -p tsconfig.test.json && node --test build-test/__tests__/*.js",
-    "validate": "npm run typecheck && npm run lint && npm run test && npm run build"
+    "e2e": "playwright test",
+    "validate": "npm run typecheck && npm run lint && npm run test && npm run e2e && npm run build"
   },
   "dependencies": {
+    "@noble/hashes": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.2",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
